--- a/index.html
+++ b/index.html
@@ -2,10 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Alyssa Roberts</title>
+  <title>Alyssa Roberts Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!-- HERO -->
+<section class="hero">
   <h1>Alyssa Roberts</h1>
-  <p>Portfolio coming soon.</p>
+  <h2>Portfolio</h2>
+</section>
+
+<!-- ABOUT -->
+<section class="about">
+  <img src="images/profile.png" alt="Alyssa Roberts">
+  <div class="about-text">
+    <h2>About</h2>
+    <p>
+      I am a second-year student majoring in Computer Engineering and Physics
+      at Northeastern University, with an expected graduation in May 2028.
+    </p>
+    <a class="button" href="resume/Alyssa's Software Resume.pdf" download>
+      Resume
+    </a>
+  </div>
+</section>
+
+<!-- PROJECTS -->
+<section class="projects">
+  <h2>Meet the Team</h2>
+
+  <div class="project-scroll">
+
+    <div class="project-card">
+      <img src="images/photodiode.png">
+      <h3>Photodiode Research</h3>
+      <p>Experimental characterization and modeling of organic photodiodes.</p>
+    </div>
+
+    <div class="project-card">
+      <img src="images/mastermind.png">
+      <h3>Object-Oriented Game Design in C++</h3>
+      <p>Console-based Mastermind game using OOP principles.</p>
+    </div>
+
+    <div class="project-card">
+      <img src="images/watering.png">
+      <h3>Autonomous Watering System</h3>
+      <p>Arduino-based system using soil moisture feedback.</p>
+    </div>
+
+    <div class="project-card">
+      <img src="images/maze.png">
+      <h3>Maze Robot</h3>
+      <p>Autonomous robot designed to navigate maze environments.</p>
+    </div>
+
+  </div>
+</section>
+
 </body>
 </html>
