--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Alyssa Roberts Portfolio</title>
+  <title>Alyssa Roberts' Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +19,15 @@
   <div class="about-text">
     <h2>About</h2>
     <p>
-      I am a second-year student majoring in Computer Engineering and Physics
-      at Northeastern University, with an expected graduation in May 2028.
+      I am a second-year student majoring in Computer Engineering and Physics at Northeastern University on the Boston campus, 
+      with an expected graduation in May 2028. I am part of the John Martinson Honors Program, which has encouraged me to explore 
+      how my education and interests can create meaningful impact. 
+
+      During my first year, I was a Global Scholar, spending my first two semesters abroad in Oakland, California and London, 
+      United Kingdom. Studying across multiple locations strengthened my independence, adaptability, and sense of responsibility. 
+
+      Outside of academics, I enjoy reading, traveling, and exploring the outdoors—especially hiking. I also love trying new foods 
+      and have a strong appreciation for food in general.
     </p>
     <a class="button" href="resume/Alyssa's Software Resume.pdf" download>
       Resume
@@ -30,7 +37,7 @@
 
 <!-- PROJECTS -->
 <section class="projects">
-  <h2>Meet the Team</h2>
+  <h2>Projects</h2>
 
   <div class="project-scroll">
 
