--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <p>
       I am a second-year student majoring in Computer Engineering and Physics at Northeastern University on the Boston campus, 
       with an expected graduation in May 2028. I am part of the John Martinson Honors Program, which has encouraged me to explore 
-      how my education and interests can create meaningful impact. 
+      how my education and interests can create meaningful impact. <br>
 
       During my first year, I was a Global Scholar, spending my first two semesters abroad in Oakland, California and London, 
-      United Kingdom. Studying across multiple locations strengthened my independence, adaptability, and sense of responsibility. 
+      United Kingdom. Studying across multiple locations strengthened my independence, adaptability, and sense of responsibility. <br>
 
       Outside of academics, I enjoy reading, traveling, and exploring the outdoors—especially hiking. I also love trying new foods 
       and have a strong appreciation for food in general.
