--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- ABOUT -->
 <section class="about">
-  <img src="images/profile.png" alt="Alyssa Roberts">
+  <img src="profile.png" alt="Alyssa Roberts">
   <div class="about-text">
     <h2>About</h2>
     <p>
@@ -29,7 +29,7 @@
       Outside of academics, I enjoy reading, traveling, and exploring the outdoors—especially hiking. I also love trying new foods 
       and have a strong appreciation for food in general.
     </p>
-    <a class="button" href="resume/Alyssa's Software Resume.pdf" download>
+    <a class="button" href="Alyssa's Software Resume.pdf" download>
       Resume
     </a>
   </div>
@@ -42,25 +42,25 @@
   <div class="project-scroll">
 
     <div class="project-card">
-      <img src="images/photodiode.png">
+      <img src="photodiode.png">
       <h3>Photodiode Research</h3>
       <p>Experimental characterization and modeling of organic photodiodes.</p>
     </div>
 
     <div class="project-card">
-      <img src="images/mastermind.png">
+      <img src="mastermind.png">
       <h3>Object-Oriented Game Design in C++</h3>
       <p>Console-based Mastermind game using OOP principles.</p>
     </div>
 
     <div class="project-card">
-      <img src="images/watering.png">
+      <img src="watering.png">
       <h3>Autonomous Watering System</h3>
       <p>Arduino-based system using soil moisture feedback.</p>
     </div>
 
     <div class="project-card">
-      <img src="images/maze.png">
+      <img src="maze.png">
       <h3>Maze Robot</h3>
       <p>Autonomous robot designed to navigate maze environments.</p>
     </div>
