--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   <div class="project-scroll">
 
     <div class="project-card">
-      <img src="photodiode.png">
+      <img src="esoil.png">
       <h3>Photodiode Research</h3>
       <p>Experimental characterization and modeling of organic photodiodes.</p>
     </div>
 
     <div class="project-card">
-      <img src="mastermind.png">
+      <img src="oop.png">
       <h3>Object-Oriented Game Design in C++</h3>
       <p>Console-based Mastermind game using OOP principles.</p>
     </div>
