--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- PROJECTS -->
 <section class="projects">
-  <h2>Projects</h2>
+  <h2><center>Projects</center></h2>
 
   <div class="project-scroll">
 
