--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- HERO -->
 <section class="hero">
-  <h1>Alyssa Roberts</h1>
+  <h1><center>Alyssa Roberts Portfolio</center></h1>
   <h2>Portfolio</h2>
 </section>
 
