--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
     <div class="project-card">
       <img src="esoil.png">
       <h3>Photodiode Research</h3>
-      <p>Experimental characterization and modeling of organic photodiodes, focusing on current-voltage behavior under varying bias 
-        and operating conditions. This work explored device performance, reliability, and parameter extraction using MATLAB-based modeling.</p>
+      <p><i>Experimental characterization and modeling of organic photodiodes, focusing on current-voltage behavior under varying bias 
+        and operating conditions. This work explored device performance, reliability, and parameter extraction using MATLAB-based modeling.</i></p>
     </div>
 
     <div class="project-card">
       <img src="oop.png">
       <h3>Object-Oriented Game Design in C++</h3>
-      <p>Designed and implemented a console-based Mastermind game using object-oriented programming principles in C++. The project emphasized 
-        modular class design, clear game logic, and collaborative software development.</p>
+      <p><i>Designed and implemented a console-based Mastermind game using object-oriented programming principles in C++. The project emphasized 
+        modular class design, clear game logic, and collaborative software development.</i></p>
     </div>
 
     <div class="project-card">
       <img src="watering.png">
       <h3>Autonomous Watering System</h3>
-      <p>Built an Arduino-based automated watering system that monitored soil moisture and water levels to control a motor-driven pump. 
-        The system provided real-time feedback to the user and prioritized efficient water use for household plants.</p>
+      <p><i>Built an Arduino-based automated watering system that monitored soil moisture and water levels to control a motor-driven pump. 
+        The system provided real-time feedback to the user and prioritized efficient water use for household plants.</i></p>
     </div>
 
     <div class="project-card">
       <img src="maze.png">
       <h3>Maze Robot</h3>
-      <p>Developed an autonomous robot using an Arduino RedBoard and custom circuitry to navigate multiple maze configurations. 
-        The project involved sensor integration and iterative testing to improve navigation accuracy and stability.</p>
+      <p><i>Developed an autonomous robot using an Arduino RedBoard and custom circuitry to navigate multiple maze configurations. 
+        The project involved sensor integration and iterative testing to improve navigation accuracy and stability.</i></p>
     </div>
 
   </div>
