--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- HERO -->
 <section class="hero">
-  <h1 style="font-family:Trebuchet MS" style="font-size:30px"><center>Alyssa Roberts Portfolio</center></h1>
+  <p style="font-family:Trebuchet MS" style="font-size:30px"><center>Alyssa Roberts Portfolio</center></p>
 </section>
 
 <!-- ABOUT -->
