--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <section class="about">
   <img src="profile.png" alt="Alyssa Roberts">
   <div class="about-text">
-    <h2>About</h2>
-    <h6>
+    <p style="font-family:Trebuchet MS" style="font-size:15px">About</p>
+    <p style="font-family:Trebuchet MS" style="font-size:6px">
       I am a second-year student majoring in Computer Engineering and Physics at Northeastern University on the Boston campus, 
       with an expected graduation in May 2028. I am part of the John Martinson Honors Program, which has encouraged me to explore 
       how my education and interests can create meaningful impact. <br><br>
@@ -27,7 +27,7 @@
 
       Outside of academics, I enjoy reading, traveling, and exploring the outdoors—especially hiking. I also love trying new foods 
       and have a strong appreciation for food in general.
-    </h6>
+    </p>
     <a class="button" href="Alyssa's Software Resume.pdf" download>
       Resume
     </a>
