--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <section class="about">
   <img src="profile.png" alt="Alyssa Roberts">
   <div class="about-text">
-    <p style="font-family:Trebuchet MS" style="font-size:15px">About</p>
-    <p style="font-family:Trebuchet MS" style="font-size:6px">
+    <p class="about-title">About</p>
+    <p class="about-body">
       I am a second-year student majoring in Computer Engineering and Physics at Northeastern University on the Boston campus, 
       with an expected graduation in May 2028. I am part of the John Martinson Honors Program, which has encouraged me to explore 
       how my education and interests can create meaningful impact. <br><br>
