--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   </div>
 </section>
 
-    <a class="button" href="Alyssa's Software Resume.pdf" download>
-      Resume
-    </a>
+   <a href="Alyssa's Software Resume.pdf" class="resume-button" target="_blank">
+  Resume
+</a>
   </div>
 </section>
 
