--- a/index.html
+++ b/index.html
@@ -14,22 +14,44 @@
 
 <!-- ABOUT -->
 <section class="about">
-  <img src="profile.png" alt="Alyssa Roberts" class="profile-pic">
+  <div class="about-container">
 
-  <div class="about-text">
-    <p class="about-title">About</p>
+    <div class="about-left">
+      <img src="profile.png" alt="Alyssa Roberts" class="profile-pic">
 
-    <p class="about-body">
-      I am a second-year student majoring in Computer Engineering and Physics at Northeastern University on the Boston campus, with an expected graduation in May 2028. 
-      I am part of the John Martinson Honors Program, which has encouraged me to explore how my education and interests can create meaningful impact.
-      <br><br>
-      During my first year, I was a Global Scholar, spending my first two semesters abroad in Oakland, California and London, United Kingdom. 
-      Studying across multiple locations strengthened my independence, adaptability, and sense of responsibility.
-      <br><br>
-      Outside of academics, I enjoy reading, traveling, and exploring the outdoors—especially hiking. I also love trying new foods and have a strong appreciation for food in general.
-    </p>
+      <a href="Alyssa's Software Resume.pdf" class="resume-button" download>
+        Resume
+      </a>
+    </div>
+
+    <div class="about-right">
+      <h2>About</h2>
+
+      <p>
+        I am a second-year student majoring in Computer Engineering and Physics at
+        Northeastern University on the Boston campus, with an expected graduation
+        in May 2028. I am part of the John Martinson Honors Program, which has
+        encouraged me to explore how my education and interests can create
+        meaningful impact.
+      </p>
+
+      <p>
+        During my first year, I was a Global Scholar, spending my first two semesters
+        abroad in Oakland, California and London, United Kingdom. Studying across
+        multiple locations strengthened my independence, adaptability, and sense
+        of responsibility.
+      </p>
+
+      <p>
+        Outside of academics, I enjoy reading, traveling, and exploring the outdoors—
+        especially hiking. I also love trying new foods and have a strong appreciation
+        for food in general.
+      </p>
+    </div>
+
   </div>
 </section>
+
 
    <a href="Alyssa's Software Resume.pdf" class="resume-button" target="_blank">
   Resume
